--- a/packages/core/sass/components/_popper.scss
+++ b/packages/core/sass/components/_popper.scss
@@ -105,6 +105,11 @@
       max-height: 50vh;
       max-width: 50vw;
       overflow: auto;
+
+      > #{$prefix}-menu,
+      > #{$prefix}-panel__stack > #{$prefix}-menu {
+        min-width: 24rem;
+      }
     }
 
     #{$base}--arrow {
